[project]
name = "commsec-dayend-pull"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask~=2.3.3",
    "pandas~=2.2.2",
    "selenium~=4.22.0",
    "google-cloud-storage",
    "google-cloud-secret-manager",
    "google-cloud-logging",
    "google-cloud-pubsub",
    "google-cloud-bigquery",
]

[dependency-groups]
dev = [
    "python-dotenv~=1.0.1",
]
