[project]
name = "commsec-dayend-pull"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask~=2.3.3",
    "selenium~=4.22.0",
    "google-cloud-storage>=3.9,<4",
    "google-cloud-secret-manager>=2.26,<3",
    "google-cloud-logging>=3.13,<4",
    "google-cloud-pubsub>=2.35,<3",
    "google-cloud-bigquery>=3.40,<4",
]

[dependency-groups]
dev = [
    "python-dotenv~=1.0.1",
]
